<resources>
    <string name="app_name">SPORT BAZAAR</string>
    <string name="otp_verification">OTP Verification !</string>
    <string name="_91">+91</string>
    <string name="xxxxxxxxxx">xx xx xx xx xx</string>
    <string name="get_otp">GET OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="welcome_to_sport_bazaar">Welcome To Sport Bazaar</string>
    <string name="don_t_recive_the_otp">Don\'t recive the otp</string>
    <string name="skip">skip</string>
    <string name="done5">Done</string>
    <string name="setting">Setting</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_to_cart">Add to Cart</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="description">Description</string>
    <string name="description1">Description</string>
    <string name="textview">TextView</string>
    <string name="home2">home</string>
    <string name="cart2">My Cart</string>
    <string name="setting2">Setting</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="cart3">Cart</string>
    <string name="search_here">Search here</string>


    <string name="open">open</string>
    <string name="close">close</string>
    <string name="save">Save</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="product_name">Product Name</string>
    <string name="cost_details">Cost Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="inr_0_0">INR 0.0</string>
    <string name="tax">Tax</string>
    <string name="_11">11%</string>
    <string name="total">Total</string>
    <string name="full_name">Full Name</string>
    <string name="wishlist">WishList</string>
    <string name="process_checkout">Process Checkout</string>
    <string name="customer_name">Customer name</string>

    <string name="OpenDrawer">Open navigation Drawer</string>
    <string name="CloseDrawer">Close navigation Drawer</string>
    <string name="title_activity_content_home">Content_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product_description">Product Description</string>
    <string name="sport_bazaar">SPORT BAZAAR</string>
    <string name="your_order_will_be_conformed">YOUR ORDER WILL BE CONFORMED !</string>
    <string name="search_here1">Search here</string>
    <string name="search_your_product_here">search your product here</string>
    <string name="title_activity_drawer_layout">DrawerLayout</string>
    <string name="homeNav">Home</string>
    <string name="close1">Close</string>
    <string name="update_image">Update image</string>
    <string name="phone_number">Phone number..</string>
    <string name="full_name_User">Full name..</string>
    <string name="set_security_question">Set security question</string>
    <string name="adress">Adress..</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="inr_1000">INR 1000</string>
    <string name="todo">TODO</string>
    <string name="Continue">continue</string>
    <string name="total_amount">Total Amount</string>
    <string name="inr_600_0">INR 600.0</string>
    <string name="go_to_home_screen">Go to Home Screen</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>