<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homee"
            android:title="@string/homeNav" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/bag"
            android:title="@string/cart2" />
        <item
            android:id="@+id/nav_wishList"
            android:icon="@drawable/wishlist"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting2" />

    </group>

    <item tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/informations"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>